# meshwell

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo_curves.py  demo_structured.py  inspect_structured_prism.py  pyproject.toml
.github/workflows/: pages.yml  pre_commit.yml  release.yml  test_code.yml
docker/: Dockerfile  build.sh
docs/: 01_intro_gmsh.py  01_quickstart.py  02_intro_meshwell.md  13_arc_identification.py  14_models.py  23_structured.py  40_mesh_quality.py  41_importing_gds.py  42_gdswell_interface.py  90_changelog.md  _config.yml  _toc.yml  adaptive_remeshing.py  adaptive_remeshing_gmsh.py  adaptive_remeshing_mmg.py  api.rst  arc_identification.py  changelog.md  direct_size_specification.py  distributed.md  distributed_example.py  gdsfactory_interface.py  gmsh_entity.py  importing_gds.py  intro.md  intro_gmsh.py  intro_meshwell.md  mesh_quality.py  models.py  occ_entity.py  parallel_meshing.py  parallel_meshing_3d.py  polysurfaces.py  prisms.py  resolution.py  resolution_advanced.py  resolution_basic.py  structured.py  structured_prisms.py  tutorial.md  (+1 more)
docs/api/: 00_installation.md  00_installation.py  01_quickstart.py  02_polysurfaces.py  03_prisms.py  04_basics.py  05_boundary_conditions.py
docs/distributed_example_work/: bench_cut_strategy_sweep_2026-05-19.txt
docs/superpowers/followup/: 2026-05-28-phase3-followup.md  2026-05-29-phase3-followup.md  2026-05-30-phase3-followup.md
docs/superpowers/plans/: 2026-03-19-cad-batching-booleans.md  2026-03-19-cad-parallel-instantiation.md  (+35 more)
meshwell/: __init__.py  _brep_io.py  _mesh_entity.py  backend_gmsh.py  backend_occ.py  backend_protocol.py  cad.py  cad_common.py  cad_gmsh.py  cad_occ.py  config.py  curvilinear_test.py  distributed.py  entity.py  geometry.py  geometry_entity.py  gmsh_adaptive_remesh.py  gmsh_entity.py  gmsh_model.py  import_gds.py  interface_tag.py  labeledentity.py  mesh.py  model.py  occ_canonicalize.py  occ_entity.py  occ_fragment_audit.py  occ_geometry_cache.py  occ_shape_heal.py  occ_to_gmsh.py  occ_xao_writer.py  orchestrator.py  parallel.py  polygon_utils.py  polyline.py  polyprism.py  polysurface.py  prism.py  process.py  quality.py  (+9 more)
meshwell/samples/: 001_device.py  002_photonic_crystal.py
meshwell/structured/: __init__.py  _zmath.py  build.py  builder.py  cohort.py  cohort_entity.py  cohort_envelope.py  cohort_neighbour.py  cohort_neighbour_shell.py  cohort_topology.py  collect.py  decompose.py  exceptions.py  logging.py  phantom.py  pipeline.py  plan.py  spec.py  types.py  validator.py  validators.py  wedge.py  wedge_alt_b_spike.py  wedge_manual_spike.py
scripts/: bench_cad_occ_parallel.py  bench_cohort_envelope.py  bench_cohort_topology.py  bench_cut_strategies.py  bench_cut_strategies_dense.py  bench_cut_strategies_legacy.py  bench_cut_strategy_sweep.py  bench_fragment_all.py  bench_structured.py  demo_curves.py  demo_structured.py  diagnose_arc_periodic.py  inspect_modified.py  inspect_ownership.py  inspect_ownership2.py  inspect_partition.py  inspect_phase3_geometry.py  inspect_piece_holes.py  inspect_pre_bop.py  spike_aabb_replacement.py  spike_alt_b.py  spike_bop_glue.py  spike_manual_lateral.py
tests/: conftest.py  diff_references.py  generate_references.py  generate_references.sh  mesh.msh  mesh_msh.msh2  mesh_msh.step  mesh_stp.stp  test_3d_transformations.py  test_additive.py  test_arc_extrusion.py  test_arc_fusion.py  test_arc_identification.py  test_arc_partial_cover.py  test_arc_provenance_helpers.py  test_backend_cross_compare.py  test_backend_equivalence.py  test_backend_loaded_equivalence.py  test_boolean_robustness.py  test_brep_builder_assembly_smoke.py  test_buffers_prism.py  test_cad.py  test_cad_common_prepare_entities_idempotent.py  test_cad_gmsh.py  test_cad_load.py  test_cad_occ.py  test_cad_occ_batched_compound_cut.py  test_cad_occ_brep_io.py  test_cad_occ_cohort_sewing.py  test_cad_occ_cutter_discovery.py  test_cad_occ_fragment_ownership.py  test_cad_occ_ownership_determinism.py  test_cad_occ_parallel_equivalence.py  test_cad_occ_parallel_failures.py  test_cad_occ_polyprism_overlap_fastpath.py  test_cad_occ_prefused_cut_tangent_safety.py  test_cad_occ_probe_gil_release.py  test_cad_occ_same_name_fuse.py  test_cohort_topology_parity.py  test_distributed.py  (+51 more)
tests/benchmarks/: benchmark_cad_batching.py  benchmark_cad_parallel.py  benchmark_resolution_handoff.py  test_benchmark_cad_batching.py  test_benchmark_cad_parallel.py  test_benchmark_resolution_handoff.py
tests/references/: mesh2D.reference.msh  mesh3D.reference.msh  mesh3D_additive.reference.msh  mesh3D_smoothing.reference.msh  mesh_extruded.reference.msh  mesh_fused.reference.msh  mesh_msh.reference.msh  mesh_prism.reference.msh  mesh_test_2D_resolution.reference.msh  mesh_test_3D_resolution.reference.msh  mesh_unfused.reference.msh
tests/structured/: __init__.py  _occ_helpers.py  test_annulus_inner_lateral.py  test_arc_provenance_helpers.py  test_arc_split_validation.py  test_arc_unstructured_neighbour.py  test_arrangement.py  test_arrangement_canonical_edges.py  test_build_registries.py  test_build_solid.py  test_builder_unit.py  test_cad_occ_phantom_hook.py  test_cad_occ_unwrap.py  test_cohort.py  test_cohort_entity.py  test_cohort_envelope_arc.py  test_cohort_envelope_assembly.py  test_cohort_envelope_build.py  test_cohort_envelope_concentric.py  test_cohort_envelope_horizontal_edges.py  test_cohort_envelope_lateral_wall.py  test_cohort_envelope_skeleton.py  test_cohort_envelope_sub_faces.py  test_cohort_envelope_vertical_edges.py  test_cohort_envelope_vertices.py  test_cohort_footprint_constancy.py  test_cohort_neighbour.py  test_cohort_neighbour_shell.py  test_cohort_topology_arcs.py  test_cohort_topology_assembly.py  test_cohort_topology_faces.py  test_cohort_topology_integration.py  test_cohort_topology_lateral_faces.py  test_cohort_topology_lateral_validity.py  test_cohort_topology_multi_arc_corner.py  test_cohort_topology_skeleton.py  test_cohort_topology_vertices_edges.py  test_collect.py  test_decompose_footprint.py  test_decompose_no_precut.py  (+81 more)
(+43 files in other folders)
