# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{ name = "Simon Bilodeau", email = "sb30@princeton.edu" }]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = ["shapely", "gmsh", "meshio", "tqdm", "pydantic", "gdstk"]
description = "GMSH wrapper, with integrated photonics focus"
keywords = ["python"]
license = { file = "LICENSE" }
name = "meshwell"
readme = "README.md"
requires-python = ">=3.11"
version = "2.1.1"

[project.optional-dependencies]
dev = [
  "pre-commit",
  "pytest",
  "pytest-xdist",
  "pytest-cov",
  "pytest_regressions",
  "jupytext",
  "autodoc_pydantic",
  "jupytext",
  "jupyter-book==1.0.4.post1",
  "sphinx-autodoc-typehints",
  "sphinx-click",
  "myst-parser",
  "plotly",
  "matplotlib",
]

[tool.black]
exclude = '''  # Specify the files/dirs that should be ignored by the black formatter
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | env
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ['py310']

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]

[tool.flake8]
exclude = [
  ".git",
  "__pycache__",
  "lib",
  "docs/source/conf.py",
  "build",
  "dist",
  ".ipynb_checkpoints",
  ".tox",
  "extra",
  "deprecated",
  ".mypy_cache",
  "venv",
]
extend-ignore = "RST303"
ignore = [
  "E501",
  "E503",
  "E722",
  "W503",
  "W503",
  "E203",
  "B950",
  "B305",
  "B018",
  "B902",
  "B020",
  "B905",
]
max-complexity = 57
max-line-length = 88
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
convention = "google"
inherit = false
match = "(?!test).*\\.py"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pytest.ini_options]
# addopts = --tb=no
addopts = '--tb=short'
norecursedirs = ["extra/*.py"]
python_files = ["meshwell/*.py", "notebooks/*.ipynb", "tests/*.py"]
testpaths = ["meshwell/", "tests"]

[tool.ruff.lint]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
  "B905", # `zip()` without an explicit `strict=` parameter
  "C408", # C408 Unnecessary `dict` call (rewrite as a literal)
  "D107", # docstrings for __init__
]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "C",    # flake8-comprehensions
  "B",    # flake8-bugbear
  "D",    # pydocstyle
  "UP",   # pyupgrade
  "T10",  # flake8-debugger
  "S",    # flake8-bandit
  "PT",   # flake8-pytest-style
  "SIM",  # flake8-simplify
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "Q",    # flake8-quotes
  "SLOT", # flake8-slots
  "ARG",  # flake8-unused-arguments
  "PTH",  # flake8-use-pathlib
  "PD",   # pandas-vet
  "FLY",  # flynt
  "NPY",  # numpy
  "PERF", # perflint
  "RUF",  # ruff
]

[tool.codespell]
ignore-words-list = "instanciate"
count = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/*.py" = [
    "B018", # allow useless expressions for notebooks
    "D100",
    "D103"
]
"tests/**/*.py" = ["S101", "D100", "D102", "D103"]

[tool.setuptools.package-data]
mypkg = ["*.csv", "*.yaml"]

[tool.setuptools.packages]
find = {}
